# purple-check-agent

./: .gitignore  README.md  extract_posts.py  fetch_posts.py  llm_client.py  llm_config.json  main.py  pyproject.toml  run_agent.py
config/: llm_config.json
data/: purple-check.db-shm  purple-check.db-wal
data/db/: purple-check-db-schema.sql  purple-check.db  purple-check.db-info
data/processed/: fetch_state.json
lib/: cookiefire
scripts/: extract_posts.py  fetch_posts.py  main.py
src/: agent.py  check_username.py  db.py  extract.py  feedback_db.py  fetch.py  llm.py  llm_client.py  posts_db.py  process.py  utils.py
test/: analyze_sentiment_test_data.json  extract_instagram_username_test_data.json  generate_test_data.py  test_analyze_sentiment.py  test_extract_instagram_username.py
tests/: bad_page.html  good_page.html
tools/: curlfire  extract_posts.py
